<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tehran Traffic Map</string>
    <string name="mapURL" translatable="false">http://www.tehrantraffic.com/trafficmap/map.asp</string>
    <string name="imgURL_old" translatable="false">http://www.tehrantraffic.com/trafficmap/ShowImage.asp</string>
    <string name="imgURL" translatable="false">http://31.24.237.150/TTCCTrafficWebSite/UploadedFiles/WebTrafficImages/Web0.png</string>
    <string name="videoURL" translatable="false">http://www.tehrantraffic.com/trafficmap/vmap/vmap.gif</string>
    <string name="rssURL" translatable="false">http://trafficcontrol.tehran.ir/DesktopModules/DNNArticle/DNNArticleRSS.aspx?portalid=0&amp;moduleid=410</string>
    <string name="imgPage">
<![CDATA[
			<html>
			 <head></head>
			 <body>
				 <center>
				 	<img src="http://www.tehrantraffic.com/trafficmap/ShowImage.asp" />
				 </center>
			 </body>
			</html>
		]]>
    </string>
    <string name="app_about">All information is provided by Tehran Traffic
		Control Co.</string>
    <string name="app_ver" translatable="false">3.2.2</string>
    <string name="app_design">Developed By: Mohsen Mirhoseini Argi</string>
    <string name="app_email" translatable="false">tehrantrafficmap@mirhoseini.info</string>
    <string name="app_facebook1">Follow us:</string>
    <string name="app_facebook2" translatable="false">http://www.facebook.com/tehrantrafficmap</string>
    <string name="app_about_title">About&#8230;</string>
    <string name="app_progress">Please wait&#8230;</string>
    <string name="app_progress_title">Downloading&#8230;</string>
    <string name="app_connection_error">Unable to connect to server and download, Please check your
		internet connection.</string>
    <string name="app_plans_title">Traffic Plans</string>
    <string name="app_help_title">Help</string>
    <string name="app_help">This program show you a Real-Time Traffic information for surface street traffic conditions within the City of Tehran. All information received from Tehran Traffic Control Co.	cameras and server.\nPress Refresh button to download the lastest map.The older map will be archived for later use and compare.</string>
    <string name="mnu_traffic">Traffic Map</string>
    <string name="mnu_traffic_short">Traffic</string>
    <string name="mnu_news">Traffic News</string>
    <string name="mnu_news_short">News</string>
    <string name="mnu_video">Traffic Animation</string>
    <string name="mnu_video_short">Animation</string>
    <string name="mnu_plans">Traffic Plans</string>
    <string name="mnu_plans_short">Traffic</string>
    <string name="mnu_metro">Metro Map</string>
    <string name="mnu_metro_short">Metro</string>
    <string name="mnu_brt">BRT Map</string>
    <string name="mnu_brt_short">BRT</string>
    <string name="mnu_help">Help</string>
    <string name="mnu_help_short">Help</string>
    <string name="mnu_about">About</string>
    <string name="mnu_about_short">About</string>
    <string name="mnu_contact">Contact</string>
    <string name="mnu_contact_short">Contact</string>
    <string name="mnu_exit">Exit</string>
    <string name="mnu_exit_short">Exit</string>
    <string name="msg_updatemap">New data available, Do you want to update the map?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_highdensity">Loading high density image, please be patient&#8230;</string>
    <string name="msg_exit">Press back again to exit&#8230;</string>
    <string name="msg_tile_click">Tap on any part of map for more information&#8230;</string>
    <string name="tileURL" translatable="false">http://31.24.237.150/TTCCTrafficWebSite/UploadedFiles/WebTrafficImages/web%1$s.png</string>
    <string name="purchase"><u>Buy ads free version</u></string>

</resources>