<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/grpMain"
        android:menuCategory="system" >
        <item
            android:id="@+id/itmMetro"
            android:icon="@drawable/ic_mnu_metro"
            android:menuCategory="alternative"
            android:title="@string/mnu_metro"
            android:titleCondensed="@string/mnu_metro_short">
        </item>
        <item
            android:id="@+id/itmPlane"
            android:icon="@drawable/ic_mnu_plane"
            android:menuCategory="alternative"
            android:title="@string/mnu_plane"
            android:titleCondensed="@string/mnu_plane_short">
        </item>
        <item
            android:id="@+id/itmVideo"
            android:icon="@drawable/ic_mnu_anim"
            android:menuCategory="alternative"
            android:title="@string/mnu_video"
            android:titleCondensed="@string/mnu_video_short">
        </item>
        <item
            android:id="@+id/itmHelp"
            android:icon="@drawable/ic_mnu_help"
            android:menuCategory="alternative"
            android:title="@string/mnu_help"
            android:titleCondensed="@string/mnu_help_short">
        </item>
        <item
            android:id="@+id/itmAbout"
            android:icon="@drawable/ic_mnu_about"
            android:menuCategory="alternative"
            android:title="@string/mnu_about"
            android:titleCondensed="@string/mnu_about_short">
        </item>
        <item
            android:id="@+id/itmExit"
            android:icon="@drawable/ic_mnu_exit"
            android:menuCategory="alternative"
            android:title="@string/mnu_exit"
            android:titleCondensed="@string/mnu_exit_short">
        </item>
    </group>

</menu>